# hitman

./: .gitignore  Makefile  README.md  docker-compose.yaml  docker-entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: hitman-ci.yml
hitman/: asgi.py  settings.py  urls.py  wsgi.py
hitman-api/: .env.dist  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  uwsgi.ini
hitman-api/hitman/: asgi.py  constants.py  settings.py  urls.py
hitman-api/hitman/utils/: viewset_mixin.py
hitman-api/hits/: models.py  permissions.py  serializers.py
hitman-api/hits/migrations/: 0001_initial.py
hitman-api/hits/tests/: test_hits_viewset.py
hitman-api/hits/tests/factories/: hit_factory.py
hitman-api/hits/viewsets/: hits_viewset.py
hitman-api/users/: models.py  permissions.py  serializers.py  utils.py
hitman-api/users/migrations/: 0001_add_user_roles.py  0002_manageruser.py  0003_auto_20200916_1642.py  0004_users_seeder.py
hitman-api/users/tests/: test_user_views.py
hitman-api/users/tests/factories/: user_factory.py  user_manager_factory.py
hitman-api/users/viewsets/: user_viewset.py
hitman-ui/: Dockerfile  docker-compose.yml  package-lock.json  package.json
hitman-ui/public/: index.html
hitman-ui/src/: App.css  App.js  App.jsx  App.test.js  App.test.jsx  router.jsx  utils.js
hitman-ui/src/components/: ConfirmationModal.jsx  Loader.jsx  Navigation.jsx
hitman-ui/src/config/: axios.js
hitman-ui/src/hooks/: useCanViewHitmen.js  (+2 more)
hits/: apps.py
users/tests/: test_user_views.py
users/viewsets/: user_viewset.py
(+9 files in other folders)
