[tool.poetry]
name = "hitman"
version = "0.1.0"
description = ""
authors = ["William De la Cruz <macwilliamdlc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
uwsgi = "^2.0.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
